Closed Bug 177405 Opened 23 years ago Closed 23 years ago

[gtk2] scrollbars look funny if they are supposed to be resized to infinite

Categories

(Core :: XUL, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: blizzard, Assigned: blizzard)

References

Details

Attachments

(1 file, 1 obsolete file)

Open a bug that only has one or two people on the cc list and look at the cc list. The bottom of the scrollbar will be cut in half and there's some sort of obvious rendering problem.
Blocks: gtk2
When Mozilla use |nsScrollbar::SetParameters(0, 0, 0, 0)|, gtk1.2 will draw a full sized slider while gtk2 draw a miniminal sized slider. I think it is gtk2 bug. We can use a workaround to get the same effect as in Mozilla/gtk1.2. patch comes soon.
Attached patch patch (workaround) (obsolete) — Splinter Review
Attachment #107464 - Flags: review?(blizzard)
Comment on attachment 107464 [details] [diff] [review] patch (workaround) not complete enough
Attachment #107464 - Flags: review?(blizzard) → review-
Attached patch patchSplinter Review
This keeps track of the values seperately so that what is passed in is what is passed back out as well.
Attachment #107464 - Attachment is obsolete: true
*** Bug 180500 has been marked as a duplicate of this bug. ***
If this is a Gtk 2 bug, can you report it to bugzilla.gnome.org please instead of ignoring the upstream issue.
Checked in. Thanks!
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: