Bug 177405.  Scrollbars look funny of they have been resized to infinite.  Fix the size at infinity to 1 so the bar fills up the entire length of the scrollbar.