widget/src/gtk2/nsScrollbar.h
@@ -131,4 +131,14 @@ private:
     GtkWidget      *mWidget;
     GtkOrientation  mOrientation;
     GtkAdjustment  *mAdjustment;
+
+    // We track these seperately because sometimes their values might
+    // be different than the values stored in the adjustment.
+    PRUint32 mMaxRange;
+    PRUint32 mThumbSize;
+
+    // Update the adjustment taking into account differences between
+    // the adjustment's method and mozilla's method for measuing
+    // infinity.
+    void UpdateAdjustment(void);
 };
